deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
        - name: golang
          image: <your-ecr-repo>/golang:latest
          ports:
            - containerPort: 8113
