deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com  # Replace with your domain or IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golang
                port:
                  number: 8113
